kqed/src/objects/Position__c.object
<CustomObject>
    <fields>
        <fullName>AUAC_Value__c</fullName>
        <formula>&apos;Accounting Unit/Activity: &apos; &amp; WGBH_Accounting_Unit__r.Accounting_Unit__c  &amp; &apos; /  &apos; &amp;  Activity_Code__r.Activity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AUAC Value</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Publish</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Activity_Code__c</fullName>
        <label>Activity Code</label>
        <referenceTo>WGBH_AUAC__c</referenceTo>
        <relationshipLabel>Job Requisitions (Activity Code)</relationshipLabel>
        <relationshipName>Job_Requisitions2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Affiliation__c</fullName>
        <label>Affiliation</label>
        <picklist>
            <controllingField>Type__c</controllingField>
            <picklistValues>
                <fullName>AEEF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confidential</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NABET</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Apex__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Apex</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approval_Comments__c</fullName>
        <label>Approval Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Approval_Comments_by_Budget_Office__c</fullName>
        <inlineHelpText>Approval comments by Budget office when ever they Approves a Job Req.</inlineHelpText>
        <label>Approval Comments by Budget Office</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Approval_Comments_by_Mindy__c</fullName>
        <inlineHelpText>Approval comments by Mindy when ever she Approves a Job Req.</inlineHelpText>
        <label>Approval Comments by Mindy</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Approve_Reject__c</fullName>
        <label>Approve/Reject</label>
        <picklist>
            <picklistValues>
                <fullName>Approve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reject</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AuthorizedSigner_For_This_Requisition__c</fullName>
        <label>Authorized Signer For This Requisition</label>
        <referenceTo>WGBH_Supervisor__c</referenceTo>
        <relationshipLabel>Job Requisitions (Authorized Signer For This Requisition)</relationshipLabel>
        <relationshipName>Job_Requisitions2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billing_Account_Category__c</fullName>
        <label>Account Category</label>
        <picklist>
            <picklistValues>
                <fullName>A1000</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Billing_Accounting_Unit__c</fullName>
        <label>Accounting Unit</label>
        <referenceTo>WGBH_AUAC__c</referenceTo>
        <relationshipLabel>Job Requisitions (Billing Accounting Unit)</relationshipLabel>
        <relationshipName>Job_Requisitions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billing_Activity_Code__c</fullName>
        <label>Activity Code</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Building_Location_Code__c</fullName>
        <label>Building Location Code</label>
        <picklist>
            <controllingField>Building_Location__c</controllingField>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAPE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT-AMX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GIA-RI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GIA-SC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GREENFIELD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LACC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NOVA NY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NYCC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NYPR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PA-AMX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WGBY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10 GUEST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 GUEST</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Building_Location__c</fullName>
        <label>Building Location</label>
        <picklist>
            <picklistValues>
                <fullName>One Guest St</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10 Guest St</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>California</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cape and Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caption Center LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caption Center NY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interactive Greenfield MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New York</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New York Promotion Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NOVA scienceNOW NY Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WGBY Springfield</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&quot;God in America&quot; Rhode Island</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&quot;God In America&quot; S. Carolina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMX &quot;Whaling&quot; PA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMX Whaling CT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Justification__c</fullName>
        <description>Business Justification for requesting the postion</description>
        <inlineHelpText>A brief justification for requesting the position; why it is needed for the business unit, how/why it is budgeted and the expected impact.</inlineHelpText>
        <label>Business Justification</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Classification__c</fullName>
        <label>Classification</label>
        <picklist>
            <picklistValues>
                <fullName>Staff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Temporary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Co - Op</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Created_By_Email__c</fullName>
        <defaultValue>$User.Email</defaultValue>
        <label>Created By Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Csharp__c</fullName>
        <defaultValue>false</defaultValue>
        <label>C#</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Days_Opened__c</fullName>
        <description>The number of days a position has been (or was) open.</description>
        <formula>IF( ISNULL( Close_Date__c ) ,
             TODAY()  -  Open_Date__c ,
             Close_Date__c  -  Open_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Opened</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Department_Code__c</fullName>
        <description>The code associated with a selected department. For Lawson Integration</description>
        <label>Department Code</label>
        <picklist>
            <picklistValues>
                <fullName>ITT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Department_Name__c</fullName>
        <formula>Departments__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Department Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department_Process_Level__c</fullName>
        <description>The process level associated with the department. Needed for Lawson integration</description>
        <label>Department Process Level</label>
        <picklist>
            <picklistValues>
                <fullName>WGBH</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Dept</label>
        <picklist>
            <picklistValues>
                <fullName>it</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>finance</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Departments__c</fullName>
        <label>Departments</label>
        <referenceTo>Department__c</referenceTo>
        <relationshipLabel>Job Requisitions</relationshipLabel>
        <relationshipName>Job_Requisitions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dotted_Line_Reporting_Relationship__c</fullName>
        <label>Dotted Line Reporting Relationship</label>
        <referenceTo>WGBH_Supervisor__c</referenceTo>
        <relationshipLabel>Job Requisitions (Dotted Line Reporting Relationship)</relationshipLabel>
        <relationshipName>Job_Requisitions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <label>Duration</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Education__c</fullName>
        <label>Education</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Educational_Requirements__c</fullName>
        <label>Educational Requirements</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Employee_To_Be_Promoted__c</fullName>
        <label>Employee To Be Promoted</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Formula__c</fullName>
        <formula>mid(Duration__c,0,4)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Functional_Area__c</fullName>
        <description>Department for which the position is created.</description>
        <inlineHelpText>Department for which the position is created.</inlineHelpText>
        <label>Department</label>
        <picklist>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Human Resources</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Miscellaneous</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warehousing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Funding_Type__c</fullName>
        <label>Funding Type</label>
        <picklist>
            <picklistValues>
                <fullName>Discretionary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Restricted</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HR_Consult__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to indicate if the requisition creation process has involved Human Resources</description>
        <inlineHelpText>Before submitting a requisition for approval you must notify your Human Resources Business Partner.</inlineHelpText>
        <label>I have consulted with HR on this req</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hire_By__c</fullName>
        <defaultValue>TODAY() + 90</defaultValue>
        <label>Hire By</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hours_Per_Week__c</fullName>
        <description>Number of hours per week.</description>
        <inlineHelpText>Number of hours per week for the position</inlineHelpText>
        <label>Hours Per Week</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internal_Candidate_ID__c</fullName>
        <description>Internal Candidate&apos;s ID preferred for the position.</description>
        <inlineHelpText>Internal Candidate&apos;s ID preferred for the position.</inlineHelpText>
        <label>Internal Candidate ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internal_Candidate_Name__c</fullName>
        <inlineHelpText>Name required if strong internal candidate field is checked</inlineHelpText>
        <label>Internal Candidate Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JavaScript__c</fullName>
        <defaultValue>false</defaultValue>
        <label>JavaScript</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Java__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Java</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_Description__c</fullName>
        <description>High-level description of the job and what its duties are.</description>
        <label>Department Overview</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Job_Level__c</fullName>
        <label>Job Level</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Requisition_Details__c</fullName>
        <formula>HYPERLINK(Id, Text(Title__c) &amp;&quot;, &quot; &amp;Text( Functional_Area__c )  ,&quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Requisition Details</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Title__c</fullName>
        <formula>Position_Title__r.Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Position_Number__c</fullName>
        <inlineHelpText>The legacy job req from hr online</inlineHelpText>
        <label>Legacy Position Number</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <picklist>
            <picklistValues>
                <fullName>Boston</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Los Angeles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New York City</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greenfield</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cape &amp; Islands</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Max_Pay__c</fullName>
        <description>Max. pay allowed for the position.</description>
        <inlineHelpText>Max. pay allowed for the position.</inlineHelpText>
        <label>Maximum Budgeted Salary</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Min_Pay__c</fullName>
        <description>Min. Pay for the position.</description>
        <inlineHelpText>Min. Pay for the position.</inlineHelpText>
        <label>Minimum Budgeted Salary</label>
        <precision>9</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_Existing_Position__c</fullName>
        <label>New/Existing Position</label>
        <picklist>
            <picklistValues>
                <fullName>New Position</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Existing Position</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Number_of_Openings_for_this_job__c</fullName>
        <label>Number of Openings for this job</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Open_Date__c</fullName>
        <label>Open Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Operating_Systems__c</fullName>
        <label>Operating Systems</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pay_Grade__c</fullName>
        <label>Pay Grade</label>
        <picklist>
            <picklistValues>
                <fullName>level1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>level2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>level3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>level4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Person_who_issues_paychecks_to_thishire__c</fullName>
        <label>Superuser/Checksort</label>
        <referenceTo>WGBH_CheckSort_Contact__c</referenceTo>
        <relationshipLabel>Job Requisitions</relationshipLabel>
        <relationshipName>Job_Requisitions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Position_Title__c</fullName>
        <label>Position Title</label>
        <referenceTo>WGBH_Job_Titles__c</referenceTo>
        <relationshipLabel>Job Requisitions</relationshipLabel>
        <relationshipName>Job_Requisitions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>high</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Programming_Languages__c</fullName>
        <label>Programming Languages</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Length__c</fullName>
        <label>Project Length (in weeks)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <label>Project Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Start_Date__c</fullName>
        <label>Project Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Publish_CloseDate__c</fullName>
        <description>Last publishing date for position.</description>
        <inlineHelpText>Last publishing date for position.</inlineHelpText>
        <label>Publish CloseDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Publish_OpenDate__c</fullName>
        <description>Date when position is published.</description>
        <inlineHelpText>Date when position is published.</inlineHelpText>
        <label>Posting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rejection_Comments__c</fullName>
        <label>Rejection Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Rejection_Comments_by_Budget_Office__c</fullName>
        <inlineHelpText>Rejection comments by Budget office when ever they rejects a Job Req.</inlineHelpText>
        <label>Rejection Comments by Budget Office</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Rejection_Comments_by_Mindy__c</fullName>
        <inlineHelpText>Rejection comments by Mindy when ever she rejects a Job Req.</inlineHelpText>
        <label>Rejection Comments by Mindy</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Responsibilities__c</fullName>
        <label>Position Overview</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Skills_Required__c</fullName>
        <label>Skills Required</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New Requisition</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COO Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open - Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open - Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Filled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Not Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Canceled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Strong_Internal_Candidate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Strong Internal Candidate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sub_Status__c</fullName>
        <label>Sub Status</label>
        <picklist>
            <picklistValues>
                <fullName>pending documents</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>candidate confirmation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Supervisor_Name__c</fullName>
        <label>Supervisor Name</label>
        <referenceTo>WGBH_Supervisor__c</referenceTo>
        <relationshipLabel>Job Requisitions</relationshipLabel>
        <relationshipName>Job_Requisitions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <picklist>
            <controllingField>Affiliation__c</controllingField>
            <picklistValues>
                <fullName>Finance Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Java Developer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sr. Architect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Temp</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Travel_Percent__c</fullName>
        <description>Percentage of Travel required for the Position.</description>
        <inlineHelpText>Percentage of Travel required for the Position.</inlineHelpText>
        <label>Travel Percent</label>
        <picklist>
            <picklistValues>
                <fullName>&lt;10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&lt;25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&lt;50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Road Warrior</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Travel_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Travel Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Full Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Part Time</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Union_Maximum_Salary__c</fullName>
        <label>Maximum Union Salary</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Union_Minimum_Salary__c</fullName>
        <label>Minimum Union Salary</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VP_Name__c</fullName>
        <label>VP Name</label>
        <picklist>
            <picklistValues>
                <fullName>Margaret Drain</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>WGBH_Accounting_Unit__c</fullName>
        <label>Accounting Unit</label>
        <referenceTo>WGBH_Accounting_Unit__c</referenceTo>
        <relationshipLabel>Job Requisitions</relationshipLabel>
        <relationshipName>Job_Requisitions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WGBH_Paperwork_Contact__c</fullName>
        <description>The paperwork contact for the position.</description>
        <inlineHelpText>The paperwork contact for the position.</inlineHelpText>
        <label>Paperwork Contact</label>
        <referenceTo>WGBH_Paperwork_Contact__c</referenceTo>
        <relationshipLabel>Job Requisitions</relationshipLabel>
        <relationshipName>Job_Requisitions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Job Requisition</label>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Position_Title__c</columns>
        <columns>Type__c</columns>
        <columns>Affiliation__c</columns>
        <columns>Classification__c</columns>
        <columns>Departments__c</columns>
        <columns>WGBH_Accounting_Unit__c</columns>
        <columns>Activity_Code__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>MyClosed</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Position_Title__c</columns>
        <columns>Type__c</columns>
        <columns>Affiliation__c</columns>
        <columns>Classification__c</columns>
        <columns>Departments__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Closed - Filled,Closed - Not Approved,Closed - Canceled</value>
        </filters>
        <label>My Closed Job Requisitions</label>
    </listViews>
    <listViews>
        <fullName>MyOpen</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Position_Title__c</columns>
        <columns>Type__c</columns>
        <columns>Affiliation__c</columns>
        <columns>Classification__c</columns>
        <columns>Departments__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Closed - Filled,Closed - Not Approved,Closed - Canceled</value>
        </filters>
        <label>My Open Job Requisitions</label>
    </listViews>
    <listViews>
        <fullName>Pending_Approval</fullName>
        <columns>Departments__c</columns>
        <columns>NAME</columns>
        <columns>Days_Opened__c</columns>
        <columns>Position_Title__c</columns>
        <columns>Min_Pay__c</columns>
        <columns>Max_Pay__c</columns>
        <columns>Created_By_Email__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Pending Approval</value>
        </filters>
        <label>Pending Approval</label>
    </listViews>
    <listViews>
        <fullName>Posted_Active_Requisitions</fullName>
        <columns>NAME</columns>
        <columns>Legacy_Position_Number__c</columns>
        <columns>Status__c</columns>
        <columns>Position_Title__c</columns>
        <columns>Type__c</columns>
        <columns>Affiliation__c</columns>
        <columns>Classification__c</columns>
        <columns>Departments__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open - Approved</value>
        </filters>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Posted Active Requisitions</label>
    </listViews>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>Position Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Requisitions</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Close_Date_Rule</fullName>
        <active>true</active>
        <errorConditionFormula>AND (
    ISNULL(  Close_Date__c ),
    OR (
         ISPICKVAL(  Status__c , &quot;Closed - Filled&quot;),
         ISPICKVAL(  Status__c , &quot;Closed - Not Approved&quot;),
         ISPICKVAL(Status__c, &quot;Closed - Canceled&quot;))
)</errorConditionFormula>
        <errorDisplayField>Close_Date__c</errorDisplayField>
        <errorMessage>Close Date must be specified when Status is set to &apos;Closed.&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Min_Pay_Rule</fullName>
        <active>true</active>
        <description>Min Pay should never exceed Max Pay.</description>
        <errorConditionFormula>Min_Pay__c  &gt;  Max_Pay__c</errorConditionFormula>
        <errorDisplayField>Min_Pay__c</errorDisplayField>
        <errorMessage>Min Pay cannot exceed Max Pay.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Publish_only_when_approved</fullName>
        <active>true</active>
        <errorConditionFormula>And( Active__c, Not( ISPICKVAL( Status__c , &apos;Open - Approved&apos;)))</errorConditionFormula>
        <errorDisplayField>Active__c</errorDisplayField>
        <errorMessage>Only Open - Approved Job Requisitions can be Published to the web.</errorMessage>
    </validationRules>
</CustomObject>